--- a/page.css
+++ b/page.css
@@ -9,3 +9,19 @@ main {
 footer {
   border-style: dotted;
 }
+
+header {
+  border-style: dashed;
+}
+
+section {
+  border-style: dashed;
+}
+
+figure {
+  border-style: dashed;
+}
+
+article {
+  border-style: dashed;
+}
