--- a/page.css
+++ b/page.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 
+font-family: 'EB Garamond', serif;
+
 header {
   border-style: dotted;
 }
