--- a/page.css
+++ b/page.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 
-font-family: 'EB Garamond', serif;
+body {
+  font-family: 'EB Garamond', serif; 
+}
 
 header {
   border-style: dotted;
