--- a/page.css
+++ b/page.css
@@ -10,6 +10,8 @@ header {
   margin: 5px;
 }
 
+
+
 main {
   border-style: dotted;
 }
@@ -30,6 +32,16 @@ section {
   border-style: dashed;
   padding: 5px;
   margin: 5px;
+  margin-right: 200px;
+}
+
+aside {
+  float:right;
+  border-style: double;
+  width: 200px;
+  height: 200px;
+  padding: 5px;
+  background-color: #f0f0f0;
 }
 
 figure {
